fixed spacing

--- a/code-exercises/magazine-layout/css/style.css
+++ b/code-exercises/magazine-layout/css/style.css
@@ -24,7 +24,6 @@ h1 {font-family: 'Arimo', sans-serif;
   margin-bottom: 20px;}
 
 h2 {line-height: 36px;
-    margin-bottom: 10px;
     width: 292px;
     margin-left: 159px;
     font-family: 'PT Serif', serif;
@@ -39,7 +38,7 @@ p {display: block;
     margin-block-end: 1em;
     width: 482px;
     height: 215px;
-    margin-top: 535px;
+    margin-top: 473px;
     margin-bottom: 67px;
     margin-left: 159px;
     font-family: 'PT Sans', sans-serif;
